[gd_scene load_steps=4 format=3 uid="uid://n0wjo2ft7yn3"]

[ext_resource type="Script" uid="uid://cdqlrb4ysex8r" path="res://Scripts/pages/Card_Follow.gd" id="1_76xe2"]
[ext_resource type="PackedScene" uid="uid://dm1lndut6vb0i" path="res://Scenes/components/control_card.tscn" id="2_xrypv"]
[ext_resource type="Resource" path="res://Resources/Cartas/60.res" id="3_xrypv"]

[node name="Card_Follow" type="PathFollow2D"]
progress = 15768.0
rotates = false
script = ExtResource("1_76xe2")

[node name="Control_Card" parent="." instance=ExtResource("2_xrypv")]
custom_minimum_size = Vector2(100, 150)
scale = Vector2(0.75, 0.75)
data = ExtResource("3_xrypv")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
